# py-funcs

./: README.md  pyproject.toml
py-funcs/: dict.py  fs.py  memory.py
py-funcs/pd/: __init__.py  listcol.py
tools/: file.py  fs.py  time.py
util/: __init__.py  dict.py  file.py  memory.py  text.py
