[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-funcs"
version = "0.0.1"
authors = [
  { name="Bryan Timm", email="contact@indierambler.com" },
]
description = "A package of helpful python functions to speed up general development"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/indierambler/py-funcs"
"Bug Tracker" = "https://github.com/indierambler/py-funcs/issues"